--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ repository = "https://www.github.com/ai-forever/gigachain"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
+fastapi = "^0.104.1"
+hypercorn = "^0.15.0"
+telethon = "^1.33.0"
 
 [tool.poetry.group.docs.dependencies]
 gigachain = { path = "libs/langchain/", develop = true }
